Blender 2.80 crashes at startup #56544

Closed
opened 2018-08-26 05:30:33 +02:00 by Angel Ribado · 10 comments

Hi! my name is Angel, this is my first post here and I wanted to report a bug which is keeping me from using blender to seek for any possible help.

System Information
Operating system: Windows 7 Ultimate x64
GPU: ATI Radeon HD 4550
CPU: Intel Core i3-2120 3.30 GHz
RAM: 4 GB

Blender Version
Broken: Blender 2.80 b30d103cf6 x64
Worked: One of the previous 2.80 versions which said "New Compiler" can't remember which one specifically was.

Short description of error
Every time I try to open Blender it launches up a blank gray screen and then immediately crashes.

Exact steps for others to reproduce the error
Occurs when attempting to run blender.

Hi! my name is Angel, this is my first post here and I wanted to report a bug which is keeping me from using blender to seek for any possible help. **System Information** Operating system: Windows 7 Ultimate x64 GPU: ATI Radeon HD 4550 CPU: Intel Core i3-2120 3.30 GHz RAM: 4 GB **Blender Version** Broken: Blender 2.80 b30d103cf63 x64 Worked: One of the previous 2.80 versions which said "New Compiler" can't remember which one specifically was. **Short description of error** Every time I try to open Blender it launches up a blank gray screen and then immediately crashes. **Exact steps for others to reproduce the error** Occurs when attempting to run blender.
Author

Added subscriber: @Ribado

Added subscriber: @Ribado

Added subscriber: @mont29

Added subscriber: @mont29

Most certainly a GPU/driver issue, please

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).
Most certainly a GPU/driver issue, please * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment).
Author

In #56544#530487, @mont29 wrote:
Most certainly a GPU/driver issue, please

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).

Hi! thanks for the response:

  • I already provided my system information and exact blender version (blender-2.80-b30d103cf63-win64) which causes the problem (let me know if
  you need more detailed info), as for the drivers I'm using AMD Catalyst 13.9.
  • I have some updates pending on Windows Update, I'll update everything and try again.

  • I can't attach a system info using 2.80 since it crashes right after launching it, however here I'm attaching the system info using the latest build of

  blender 2.79 (blender-2.79-920dff35dc3-win64) which works perfectly.
  • Can you help me with how to start Blender from the command line? I don't know how to start it in debug mode or factory settings using those
  commands.

Thanks!
system-info.txt

> In #56544#530487, @mont29 wrote: > Most certainly a GPU/driver issue, please > * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! > * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). > * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). > * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). > * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). > * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment). Hi! thanks for the response: - I already provided my system information and exact blender version (blender-2.80-b30d103cf63-win64) which causes the problem (let me know if ``` you need more detailed info), as for the drivers I'm using AMD Catalyst 13.9. ``` - I have some updates pending on Windows Update, I'll update everything and try again. - I can't attach a system info using 2.80 since it crashes right after launching it, however here I'm attaching the system info using the latest build of ``` blender 2.79 (blender-2.79-920dff35dc3-win64) which works perfectly. ``` - Can you help me with how to start Blender from the command line? I don't know how to start it in debug mode or factory settings using those ``` commands. ``` Thanks! [system-info.txt](https://archive.blender.org/developer/F4396911/system-info.txt)
Author

In #56544#530487, @mont29 wrote:
Most certainly a GPU/driver issue, please

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).

Hi again, already updated everything pending on Windows Update but no luck so far, I also figured out how to start blender in debug mode as you told me and got this log from cmd, here is the error log attached as a txt, it seems some kind of problem with opengl even though my gpu supports opengl 3.3.

Thanks!
Debug gpu log.txt
OpenGL Extension Viewer.PNG

> In #56544#530487, @mont29 wrote: > Most certainly a GPU/driver issue, please > * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! > * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). > * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). > * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). > * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). > * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment). Hi again, already updated everything pending on Windows Update but no luck so far, I also figured out how to start blender in debug mode as you told me and got this log from cmd, here is the error log attached as a txt, it seems some kind of problem with opengl even though my gpu supports opengl 3.3. Thanks! [Debug gpu log.txt](https://archive.blender.org/developer/F4414366/Debug_gpu_log.txt) ![OpenGL Extension Viewer.PNG](https://archive.blender.org/developer/F4414610/OpenGL_Extension_Viewer.PNG)
Clément Foucault was assigned by Bastien Montagne 2018-09-03 17:06:29 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Indeed, looks like buggy driver… win7 is becoming old too, vendors are not always putting a lot of efforts in their drivers for that OS anymore…

@fclem will let you handle that one, feel free to merge in existing task if you think we already had that reported somewhere. ;)

Indeed, looks like buggy driver… win7 is becoming old too, vendors are not always putting a lot of efforts in their drivers for that OS anymore… @fclem will let you handle that one, feel free to merge in existing task if you think we already had that reported somewhere. ;)

This issue was referenced by fbbadc8775

This issue was referenced by fbbadc8775173c4a911838928b00b79701c90517

In the system info GL_ARB_texture_gather is listed as supported. But it fails to find it during compilation time.

It seems that someone is having the same problem here: https://community.amd.com/thread/168106

So we need to double check again if GL_ARB_texture_gather is define by the preprocessor in the shader.

In the system info GL_ARB_texture_gather is listed as supported. But it fails to find it during compilation time. It seems that someone is having the same problem here: https://community.amd.com/thread/168106 So we need to double check again if `GL_ARB_texture_gather` is define by the preprocessor in the shader.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56544
No description provided.